--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,13 +16,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
+        <ImageView
+
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_height="119dp"
+            android:src="@drawable/backlogo"
             android:text="User Login"
-            android:id="@+id/textView"
-            android:layout_gravity="center_horizontal" />
+            />
 
         <EditText
             android:id="@+id/editTextEmail"
@@ -45,10 +45,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:text="Signup" />
+            android:text="Signin" />
 
         <TextView
-            android:text="Not have an account? Signup Here"
+            android:text="Don't have an account? Signup Here"
             android:id="@+id/textViewSignUp"
             android:textAlignment="center"
             android:layout_margin="15dp"
