--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,6 +10,18 @@
     tools:context="com.example.admin.regg.LoginActivity">
 
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="11dp"
+        android:layout_weight="1"
+        android:text="Don't have an account? Signup Here"
+        android:textAlignment="center" />
+
     <ImageView
 
             android:layout_width="wrap_content"
@@ -24,10 +36,10 @@
             android:layout_height="wrap_content"
             android:hint="Enter email"
             android:inputType="textEmailAddress"
-            android:layout_below="@+id/imageView"
+            android:layout_marginBottom="29dp"
+            android:layout_above="@+id/editTextPassword"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="24dp" />
+            android:layout_alignParentStart="true" />
 
         <EditText
             android:id="@+id/editTextPassword"
@@ -43,7 +55,7 @@
         android:id="@+id/signInButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="17dp"
+        android:layout_marginBottom="25dp"
         android:layout_above="@+id/textViewSignUp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -59,13 +71,13 @@
 
         <Button
             android:id="@+id/buttonSignin"
-            android:layout_height="61dp"
-            android:background="@drawable/sigg"
-            android:layout_width="511dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Signin"
             android:layout_above="@+id/textView2"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginBottom="25dp" />
 
 
 
@@ -78,7 +90,8 @@
             android:layout_weight="1"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="11dp" />
 
 
 
